--- a/src/Row.css
+++ b/src/Row.css
@@ -15,23 +15,24 @@
 }
 
 .row__poster {
-  max-height: 100px;
+  max-height: 150px;
   object-fit: contain;
   margin-right: 10px;
   width: 100%;
-  transition: transform 450ms;
+  transition: transform 0.3s ease-in-out;
 }
 
 .row__poster:hover {
-  transform: scale(1.08);
+  transform: scale(1.05);
   opacity: 1;
 }
 
 .row__posterLarge {
   max-height: 250px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .row__posterLarge:hover {
-  transform: scale(1.09);
+  transform: scale(1.1);
   opacity: 1;
 }
